--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   
-  <div id="divh1"><h1>Geochecker</h1></div>
+  <div id="divh1"><h1>MyGeochecker</h1></div>
   <h2>Bahnhof Oybin - GC9QD1H</h2>
   <br>
   <h3>Bitte beantwortet die kurzen Fragen, um die Koordinaten zu erhalten.</h3>
